<resources>
    <string name="about">A propos</string>
    <string name="accuracy_locator">Précision de localisation</string>
    <string name="action_settings">Paramètres</string>
    <string name="add_button">add_button</string>
    <string name="advanced_settings">Paramètres avancés</string>
    <string name="alarm">Alarmes</string>
    <string name="alarm_created">Alarme créé</string>
    <string name="alarm_removed">Alarme supprimée</string>
    <string name="all_fields">Veuillez renseigner tous les champs</string>
    <string name="all_sentences">Toutes les phrases</string>
    <string name="and_more">Et bien plus encore</string>
    <string name="app_description">Cette application fonctionne avec le programme domotique open source GladysProject. GladysProject est un programme open-source pour Raspberry Pi. Ce programme se connecte à vos périphériques et à votre agenda pour mieux vous aider au quotidien.</string>
    <string name="app_info">Informations sur l\'application</string>
    <string name="app_name">Gladys</string>
    <string name="approve_button">Approuver</string>
    <string name="approuved_sentences">Phrases Aprouvées</string>
    <string name="are_you">Êtes-vous</string>
    <string name="auto_reporting">Envoi auto</string>
    <string name="auto_reporting_summary">Envoi de la position automatiquement</string>
    <string name="auto_start">Démarrage auto</string>
    <string name="auto_start_summary">Lancer l\'application au démarrage de l\'appareil</string>
    <string name="brain">Brain</string>
    <string name="category">Catégorie :</string>
    <string name="command_send">Commande envoyée</string>
    <string name="connection">Connexion</string>
    <string name="create_token">Comment créer un token</string>
    <string name="create_token_guide">Pour créer un token il vous suffit de vous connecter sur l’interface de Gladys avec votre compte puis d’aller dans les paramètres et enfin dans l’onglet sécurité. Donner un nom à votre token et cliquez sur nouveau.</string>
    <string name="cron">Règle cron</string>
    <string name="cron_example">Exemple: 0 0 * * * *</string>
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_description">Contrôlez tous vos devices à tout moment et depuis n\'importe où.</string>
    <string name="date">Date</string>
    <string name="description_config_local">Entrez l’adresse IP locale de Gladys avec son port (8080 par défaut) et le token d’authentification de votre compte. L’HTTPS n’est pas géré en local. Ces paramètres pourront être modifiés plus tard.</string>
    <string name="displacement_locator">Distance</string>
    <string name="displacement_locator_summary">Distance de déplacement entre chaque mise à jour de la position</string>
    <string name="display">Afficher</string>
    <string name="dns_adress">DNS / IP Publique</string>
    <string name="dns_adress_example">Exemple: monadresse.ddns.net</string>
    <string name="dns_port_example">Exemple: 443</string>
    <string name="empty">null</string>
    <string name="enter_message">Entrer un message</string>
    <string name="event_created">Evènement créé</string>
    <string name="first_name">Prénom</string>
    <string name="app_functionalities_description">Envoyez votre position GPS à tout moment pour déclencher des scenarios. Gérez vos alarmes, vos phrases et déclenchez des évènements en quelques clics.</string>
    <string name="help_create_token">Besoin d\'aide pour créer un token ?</string>
    <string name="home_assistant">Your home assistant</string>
    <string name="house">Maison :</string>
    <string name="house_id">ID Logement</string>
    <string name="house_id_example">Exemple: 1</string>
    <string name="https">HTTPS</string>
    <string name="id">ID :</string>
    <string name="info">Infos</string>
    <string name="interval_locator">Intervalle</string>
    <string name="interval_locator_summary">Temps en secondes entre chaque mise à jour de la position</string>
    <string name="ip_adress">Adresse IP locale</string>
    <string name="ip_adresse_example">Exemple: 192.168.1.12</string>
    <string name="it_is_not_you">Ce n\'est pas vous ?</string>
    <string name="it_is_not_you_message">Assurez-vous d’avoir utilisé un token lié à votre compte afin que Gladys puisse vous identifier.</string>
    <string name="is_me">Oui c\'est moi</string>
    <string name="is_not_me">Non ce n\'est pas moi</string>
    <string name="label">Label :</string>
    <string name="last_value">Dernière valeur :</string>
    <string name="loading">Chargement</string>
    <string name="location_button">location</string>
    <string name="maps">Maps</string>
    <string name="name">Nom</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="negative_button">Annuler</string>
    <string name="new_object">Nouveau</string>
    <string name="no">Non</string>
    <string name="no_alarms">Vous n\'avez aucune alarme</string>
    <string name="no_devices">Vous n\'avez aucun device</string>
    <string name="no_events">Vous n\'avez aucun évènement</string>
    <string name="no_rooms">Vous n\'avez aucune pièce</string>
    <string name="no_sentences">Vous n\'avez aucune phrase</string>
    <string name="no_wifi_message">Vous n’êtes pas connecté en Wifi, souhaitez-vous configurer les paramètres de connexion en itinérance ?</string>
    <string name="open_source_license">Licenses open source</string>
    <string name="other">Autres</string>
    <string name="permission_denied">Permission refusée</string>
    <string name="port">Port</string>
    <string name="port_example">Exemple: 8080</string>
    <string name="positve_button">OK</string>
    <string name="recurring">Réveil récurrent</string>
    <string name="report_button">report</string>
    <string name="remove_alarm">Êtes-vous sûr de vouloir supprimer l\'alarme ?</string>
    <string name="reject_button">Rejeter</string>
    <string name="rejected_sentences">Phrases rejetées</string>
    <string name="rooms">Pièces</string>
    <string name="service">Service :</string>
    <string name="settings">Paramètres</string>
    <string name="set_date">Régler la date</string>
    <string name="set_label">Label</string>
    <string name="set_time">Régler l\'heure</string>
    <string name="settings_title_connection">Connexion</string>
    <string name="settings_title_general">Général</string>
    <string name="settings_title_geolocation">Géolocalisation</string>
    <string name="specific_date">Réveil à une date précise</string>
    <string name="statue">Statut :</string>
    <string name="tag">Tag :</string>
    <string name="tchat">Tchat</string>
    <string name="time">Heure</string>
    <string name="timeline">Timeline</string>
    <string name="title_dialog_alarm">Définir un réveil</string>
    <string name="title_dialog_event">Déclencher un évènement</string>
    <string name="title_dialog_label">Choisissez un label</string>
    <string name="token">Token</string>
    <string name="token_example">Exemple: 95g6s2d5g3e5s1fg5d7g46d</string>
    <string name="type">Type :</string>
    <string name="use_dns_adress">Utiliser un DNS / IP publique</string>
    <string name="useful_links">Liens utiles</string>
    <string name="user">Utilisateur</string>
    <string name="user_id">ID Utilisateur</string>
    <string name="user_id_example">Exemple: 1</string>
    <string name="value">Valeur :</string>
    <string name="version">Version :</string>
    <string name="waiting_sentences">Phrases en attentes</string>
    <string name="yes">Oui</string>
    <string name="you_are_ready">Vous êtes prêt</string>
</resources>
