<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:dialogTitle="@string/name"
        android:key="name"
        android:hint="@string/name"
        android:negativeButtonText="@string/negative_button"
        android:positiveButtonText="@string/positve_button"
        android:title="@string/name" />

    <EditTextPreference
        android:dialogTitle="@string/first_name"
        android:key="first_name"
        android:hint="@string/first_name"
        android:negativeButtonText="@string/negative_button"
        android:positiveButtonText="@string/positve_button"
        android:title="@string/first_name" />

    <EditTextPreference
        android:dialogTitle="@string/user_id"
        android:key="user_id"
        android:hint="@string/user_id_example"
        android:negativeButtonText="@string/negative_button"
        android:positiveButtonText="@string/positve_button"
        android:title="@string/user_id" />

    <EditTextPreference
        android:dialogTitle="@string/house_id"
        android:key="house_id"
        android:hint="@string/house_id_example"
        android:negativeButtonText="@string/negative_button"
        android:positiveButtonText="@string/positve_button"
        android:title="@string/house_id" />
</PreferenceScreen>