<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/DashBoard"
            android:checked="true"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/Rooms"
            android:icon="@drawable/ic_home"
            android:title="@string/rooms" />
        <item
            android:id="@+id/Timeline"
            android:icon="@drawable/ic_timeline"
            android:title="@string/timeline" />
        <item
            android:id="@+id/Réveils"
            android:icon="@drawable/ic_alarm"
            android:title="@string/alarm" />
        <item
            android:id="@+id/Infos"
            android:icon="@drawable/ic_info"
            android:title="@string/info" />
    </group>

</menu>
