<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_button"
        android:icon="@drawable/ic_add"
        android:title="@string/add_button"
        android:visible="false"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:icon="@drawable/ic_gladys_maj"
        app:showAsAction="ifRoom"
        android:title="@string/action_settings" /> <!-- todo update settings icon to a better one-->
    <!-- ifRoom is used to specify that this menu is shown a icon only if there are space for it. If not, it will be shown as text on a 3 dots icon menu -->

    <item
        android:id="@+id/miActionProgress"
        android:title="@string/loading"
        android:visible="false"
        app:actionLayout="@layout/action_view_progress"
        app:showAsAction="ifRoom" />
</menu>
