<?xml version="1.0" encoding="utf-8"?>
<agency.tango.materialintroscreen.parallax.ParallaxRelativeLayout
    android:id="@+id/configIntroLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:theme="@style/Material.EditTextTheme.Light">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ip_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ip_adress"
            android:inputType="number|numberDecimal"
            android:digits="0123456789."
            android:singleLine="true"
            android:textColor="@color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editText"
        android:layout_margin="20dp"
        android:theme="@style/Material.EditTextTheme.Light">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/port_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/port"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editText2"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:theme="@style/Material.EditTextTheme.Light">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/token_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/token"
            android:singleLine="true"
            android:textColor="@color/white" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/help_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText3"
        android:layout_below="@+id/editText3"
        android:layout_marginLeft="5dp"
        android:clickable="true"
        android:text="@string/help_create_token"
        android:textColor="@color/colorTextHint"
        android:textSize="12sp"
        android:focusable="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Tooltip"/>

    <Button
        android:id="@+id/test_button"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/help_token"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/colorAccent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/connection"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/test_button"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/description_config_local"
        android:textAlignment="center"
        android:textColor="@color/white" />


</agency.tango.materialintroscreen.parallax.ParallaxRelativeLayout>