<?xml version="1.0" encoding="utf-8"?>
<agency.tango.materialintroscreen.parallax.ParallaxRelativeLayout
    android:id="@+id/configIntroLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:theme="@style/Material.EditTextTheme.Dark">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dns_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:hint="@string/dns_adress"
            android:inputType="number|numberDecimal"
            android:singleLine="true"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editText"
        android:layout_marginTop="20dp"
        android:theme="@style/Material.EditTextTheme.Dark">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nat_token_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/token"
            android:singleLine="true"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <Switch
        android:id="@+id/https"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/https"
        android:textColor="@android:color/black"
        android:theme="@style/AppTheme" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/https"
        android:layout_marginTop="20dp"
        android:theme="@style/Material.EditTextTheme.Dark">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nat_port_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/port"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>

</agency.tango.materialintroscreen.parallax.ParallaxRelativeLayout>